--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": " npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,10 @@
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.9",
-    "nodemon": "^3.1.7",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
